# hashing

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh  hashing.hpp  run.sh
include/: aqua.hpp  city.hpp  meow.hpp  mult.hpp  murmur.hpp  reduction.hpp  tabulation.hpp  types.hpp  xxh.hpp
include/convenience/: builtins.hpp  undef.hpp
results/: bench_clang++13.0.1.json  bench_g++11.2.0.json  plots.ipynb
src/: CMakeLists.txt  benchmarks.cpp  datasets.hpp
